<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_display_by_topic_default"
        android:entries="@array/settings_display_by_topic_labels"
        android:entryValues="@array/settings_display_by_topic_values"
        android:key="@string/settings_display_by_topic_key"
        android:title="@string/settings_display_by_topic_label" />

    <ListPreference
        android:defaultValue="@string/settings_display_by_region_default"
        android:entries="@array/settings_display_by_region_labels"
        android:entryValues="@array/settings_display_by_region_values"
        android:key="@string/settings_display_by_region_key"
        android:title="@string/settings_display_by_region_label" />
</PreferenceScreen>