<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/news_item_height"
    android:layout_margin="@dimen/dp_6"
    android:backgroundTint="@android:color/white"
    android:clickable="true"
    android:elevation="2dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    cardView:cardCornerRadius="@dimen/corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/news_image_height"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/headline_text"
            style="@style/StandardTextView"
            android:layout_below="@id/news_image"
            android:layout_margin="@dimen/view_margin_standard"
            android:textStyle="bold"
            android:textSize="@dimen/headline_size"
            tools:text="@string/placeholder_headline" />

        <TextView
            android:id="@+id/trail_text"
            style="@style/StandardTextView"
            android:layout_below="@id/headline_text"
            android:layout_marginBottom="@dimen/view_margin_standard"
            android:layout_marginEnd="@dimen/view_margin_standard"
            android:layout_marginStart="@dimen/view_margin_standard"
            android:maxLines="3"
            android:ellipsize="end"
            android:textSize="@dimen/trailtext_size"
            tools:text="@string/placeholder_trailtext" />

        <TextView
            android:id="@+id/category_text"
            style="@style/StandardTextView"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/view_margin_standard"
            android:textSize="@dimen/trailtext_size"
            tools:text="@string/placeholder_category" />


        <TextView
            android:id="@+id/date_view"
            style="@style/StandardTextView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/view_margin_standard"
            android:layout_marginBottom="@dimen/view_margin_standard"
            android:layout_marginTop="@dimen/dp_6"
            android:textSize="@dimen/details_size"
            tools:text="@string/placeholder_date" />

        <TextView
            android:id="@+id/byline_text"
            style="@style/StandardTextView"
            android:layout_above="@id/date_view"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/view_margin_standard"
            android:layout_marginEnd="@dimen/view_margin_standard"
            android:textSize="@dimen/details_size"
            tools:text="@string/placeholder_author" />


    </RelativeLayout>

</android.support.v7.widget.CardView>